@@ -658,21 +658,29 @@
 # Create a new bridge using the "connection" option as described below. Set
 # options for the bridges using the remaining parameters. You must specify the
 # address and at least one topic to subscribe to.
+#
 # Each connection must have a unique name.
+#
 # The address line may have multiple host address and ports specified. See
 # below in the round_robin description for more details on bridge behaviour if
-# multiple addresses are used.
+# multiple addresses are used. Note that if you use an IPv6 address, then you
+# are required to specify a port.
+#
 # The direction that the topic will be shared can be chosen by 
 # specifying out, in or both, where the default value is out. 
 # The QoS level of the bridged communication can be specified with the next
 # topic option. The default QoS level is 0, to change the QoS the topic
 # direction must also be given.
+#
 # The local and remote prefix options allow a topic to be remapped when it is
 # bridged to/from the remote broker. This provides the ability to place a topic
 # tree in an appropriate location. 
+#
 # For more details see the mosquitto.conf man page.
+#
 # Multiple topics can be specified per connection, but be careful 
 # not to create any loops.
+#
 # If you are using bridges with cleansession set to false (the default), then
 # you may get unexpected behaviour from incoming topics if you change what
 # topics you are subscribing to. This is because the remote broker keeps the
