@@ -8,6 +8,8 @@ Broker:
 - Use AF_UNSPEC etc. instead of PF_UNSPEC to comply with POSIX. Closes #863.
 - Remove use of AI_ADDRCONFIG, which means the broker can be used on systems
   where only the loopback interface is defined. Closes #869, Closes #901.
+- Fix IPv6 addresses not being able to be used as bridge addresses.
+  Closes #886.
 
 
 1.5 - 20180502
